--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,44 @@ html, body {
   min-height: 100vh; /* Ensures the gradient covers the full viewport height */
   margin: 0; /* Removes default body margin */
   padding: 0;
+  font-family: Arial, sans-serif;
 }
 
 .Row {
     display: table;
-    width: 2020px; /*Optional*/
+    width: 100%; /*Optional*/
     text-align: center;
-    align-items: flex-start;
+    align-items: center;
     border: 5px;
-    font-size: 20px;
+    
     
 }
 .Column {
     display: table-cell;
-    text-align: center;
+    text-align: baseline;
     vertical-align: top;
+    padding: 20px;
+    font-size: 20px;
     
+    
+}
+
+h1 {
+  font-weight: bold;
+  color: #000000;
+  font-size: 50px;
+  font-family: Arial, sans-serif;
+  border: 1px solid black;
+  
+}
+
+h2 {
+  font-weight: bold;
+  color: #000000;
+  font-size: 20px;
+  font-family: Arial, sans-serif;
+  display: inline-block;
+  border: 1px solid black;
+
+
 }
