--- a/css/style.css
+++ b/css/style.css
@@ -75,10 +75,11 @@ h1 {
 h2 {
   font-weight: bold;
   color: #000000;
-  font-size: 20px;
+  font-size: 40px;
   font-family: Arial, sans-serif;
   display: inline-block;
-  border: 1px solid black;
+  
+  border-radius: 10px;
 
 
 }
@@ -100,11 +101,13 @@ h2 {
 }
 
 .banner {
-     background-color: #FFC067;
-    color: white; /* Text color */
+    background: linear-gradient(to top, #b62f2f 0%, #a34a3e 25%, #f88a4b 50%, #f1c451 75%, #faf36c 100%);
+    color: black; /* Text color */
     text-align: center; /* Center align text */
     padding: 1px;
     border-radius: 10px;
+    align-items: center;
+    width:100%;
 }
 
 p{
