--- a/css/style.css
+++ b/css/style.css
@@ -117,3 +117,13 @@ p{
   border-radius: 10px;
   padding: 1%;
 }
+
+.credits {
+    background:  #feb47b;
+    color: black; /* Text color */
+    text-align: center; /* Center align text */
+    
+    border-radius: 10px;
+    align-items: left;
+    width:100%;
+}
